--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,34 @@
-body {
+html {
+    background-color: #f5f5f5;
     font-family: Arial, sans-serif;
     font-size: 100%;
+}
+
+html,
+body,
+.content {
+    height: 100%;
+}
+
+.content {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+
+    margin: 0 auto;
+    padding-top: 10%;
+    max-width: 600px;
+    text-align: center;
+}
+
+.btn {
+    padding: 1em 2em;
+}
+
+.btn-start {
+    /*background-color: #a72525;*/
+    background-color: #25a725;
+    border: 0;
+    border-radius: 3px;
+    color: white;
 }
