--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body,
             box-sizing: border-box;
 
     margin: 0 auto;
-    padding-top: 10%;
+    padding-top: 5%;
     max-width: 600px;
     text-align: center;
 }
@@ -50,6 +50,11 @@ body,
 }
 
 .counter .unit {
+    font-size: 0.9em;
+    font-style: italic;
+}
+
+.note {
     font-size: 0.9em;
     font-style: italic;
 }
