added note section to the experiment for displaying useful information about the browser. Currently this is whether the browser supports blob storage.

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,15 @@ body,
     font-style: italic;
 }
 
+.notes {
+    text-align: left;
+}
+
+.notes ul {
+    padding-left: 1em;
+}
+
+.notes ul li,
 .note {
     font-size: 0.9em;
     font-style: italic;
